--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 <body>
     <div class="container">
-        <h1>🐾 FUWAMOCO 🐾</h1>
+        <h1>🐾 FUWAMOCO - CI/CD IS WORKING 🐾</h1>
         <img src="FUWAMOCO.webp" alt="FUWAMOCO" style="max-width: 300px; border-radius: 10px; margin: 10px 0;">
         <p class="status">BAU BAU!</p>
 
