--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             font-family: Arial;
             text-align: center;
             padding: 50px;
-            background: linear-gradient(135deg, #ffb6c1, #87ceeb);
+            background: linear-gradient(135deg, #000000, #ff0000);
             min-height: 100vh;
             margin: 0;
             box-sizing: border-box;
